k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
spec:
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: cnova305/team_alcohol_api
          imagePullPolicy: Never
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
          ports:
            - containerPort: 13000
