k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: cnova305/team_alcohol_frontend
          imagePullPolicy: Never
          resources:
            limits:
              memory: "2048Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
