k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresdb
  template:
    metadata:
      labels:
        app: postgresdb
    spec:
      containers:
        - name: postgresdb
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgres/data
              name: db-data
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1"
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim

---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgresdb
spec:
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  selector:
    app: postgresdb
