k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  ingressClassName: "nginx"
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /?(.*)
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
          - pathType: ImplementationSpecific
            path: /api/?(.*)
            backend:
              service:
                name: api-service
                port:
                  number: 13000
